src/sdlui.h

typedef int32_t i32;
struct SDLUI_String;
struct SDLUI_Theme;
struct SDLUI_Control;
struct SDLUI_Font;
struct SDLUI_ArrayOfControls;
struct SDLUI_Control_Window;
struct SDLUI_Control_Button;
struct SDLUI_Control_SliderInt;
struct SDLUI_Control_CheckBox;
struct SDLUI_Control_ToggleButton;
struct SDLUI_Control_RadioButton;
struct SDLUI_Control_TextBox;
struct SDLUI_Core;
struct SDLUI_Control_Tab;
struct SDLUI_Control_TabContainer;
struct SDLUI_Control_Label;
struct SDLUI_Control_Text;
struct SDLUI_Control_ScrollArea;
struct SDLUI_Control_List;
    // sdlui_create
	SDLUI_Control_Window *SDLUI_CreateWindow(i32 x, i32 y, i32 w, i32 h, char const *title);
	SDLUI_Control_Button *SDLUI_CreateButton(SDLUI_Control_Window *wnd, i32 x, i32 y, char const *text);
	SDLUI_Control_SliderInt *SDLUI_CreateSliderInt(SDLUI_Control_Window *wnd, i32 x, i32 y, i32 min, i32 max, i32 value, SDLUI_ORIENTATION orientation );
	SDLUI_Control_CheckBox *SDLUI_CreateCheckBox(SDLUI_Control_Window *wnd, i32 x, i32 y, char const *text, bool checked);
	SDLUI_Control_Text *SDLUI_CreateText(SDLUI_Control_Window *wnd, i32 x, i32 y, char const *text);
	SDLUI_Control_ToggleButton *SDLUI_CreateToggleButton(SDLUI_Control_Window *wnd, i32 x, i32 y, char const *text, bool checked);
	SDLUI_ArrayOfControls SDLUI_CreateRadioButtonGroup();
	SDLUI_Control_RadioButton *SDLUI_CreateRadioButton(SDLUI_Control_Window *wnd, SDLUI_ArrayOfControls &group, i32 x, i32 y, char const *text, bool checked);
	SDLUI_Control_TabContainer *SDLUI_CreateTabContainer(SDLUI_Control_Window *wnd, i32 x, i32 y, i32 w, i32 h);
	SDLUI_Control_ScrollArea *SDLUI_CreateScrollArea(SDLUI_Control_Window *wnd, i32 x, i32 y, i32 w, i32 h, SDL_Texture *tex);
	SDLUI_Control_List *SDLUI_CreateList(SDLUI_Control_Window *wnd, SDLUI_Control_ScrollArea *sa, i32 num_items);
	SDLUI_Control_TextBox *SDLUI_CreateTextBox(SDLUI_Control_Window *wnd, i32 x, i32 y, i32 w);
    // sdlui_event
    void SDLUI_EventHandler(SDL_Event const &ev);
    // sdlui_helpers
	float SDLUI_Map(float in_min, float in_max, float out_min, float out_max, float value);
	float SDLUI_Clamp(float n, float min, float max);
	bool SDLUI_PointInRect(SDL_FRect rect, float x, float y);
	void SDLUI_Init(SDL_Renderer *r, SDL_Window *w);
	void SDLUI_MouseStateReset();
	void SDLUI_MouseStateSet(i32 event_type, i32 mbutton);
	SDLUI_MOUSEBUTTON SDLUI_MouseButton(i32 mbutton);
	void SDLUI_SetColor(SDL_Color c);
	void SDLUI_GradientToTexture(SDL_Texture *t, SDL_Color c, i32 width, i32 height, i32 interv);
	float SDLUI_Max(float a, float b);
	void SDLUI_Colorize(SDL_Texture *t, SDL_Color c);
	void SDLUI_SetActiveWindow(SDLUI_Control_Window *wnd);
	SDLUI_RESIZE_DIRECTION SDLUI_SetWindowResizeCursor(SDLUI_Control_Window *wnd, float mousex, float mousey);
	void SDLUI_ResizeWindow(SDLUI_Control_Window *aw, SDLUI_RESIZE_DIRECTION res_dir, i32 mx, i32 my);
	void SDLUI_WindowHandler();